--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "test"
   },
   "dependencies": {
-    "acorn-jsx": "^2.0.0",
+    "acorn": "^6.1.1",
     "commander": "^2.4.0",
     "falafel": "~1.2.0",
     "glob": "^4.0.6",
